--- a/web/src/pages/aboutUs.html
+++ b/web/src/pages/aboutUs.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teatro Galeguista</title>
-    <link rel="stylesheet" href="../styles/aboutUs.css" />
+    <link rel="stylesheet" href="../styles/main/aboutUs.css" />
+    <link rel="stylesheet" href="../styles/generales.css" />
   </head>
   <body>
     <section class="aboutUs_seccion">
