--- a/web/src/pages/footer.html
+++ b/web/src/pages/footer.html
@@ -12,9 +12,12 @@
     <footer class="footer">
         <div class="footer_wrapper">
             <div class="footer_column">
-                <h1>TEATRO GALEGUISTA</h1>
+                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo">
             </div>
-            <div class="footer_column"></div>
+            <div class="footer_column">
+                <h2>QUIENES SOMOS</h2>
+                <a href="#">Quienes somos</a>
+            </div>
             <div class="footer_column"></div>
             <div class="footer_column"></div>
         </div>
