--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/main/main.css">
+    <link rel="stylesheet" href="../styles/main/mainPage.css">
     <link rel="stylesheet" href="../styles/generales.css">
 </head>
 
 <body>
 
     <main class="mainPage">
+        <div class="mainPage_mainImage">
+            <img src="../assets/images/mainPage_mainImage.jpg" alt="">
 
+        </div>
     </main>
 
 </body>
