Update para merge

--- a/web/src/pages/header.html
+++ b/web/src/pages/header.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="../styles/generales.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
+    <header class="header">
+      <nav class="header_nav">
+        <ul class="header_ul">
+          <li class="header_li">
             <div class="header_interestLinks">
               <a href="/">TODAS LAS FUNCIONES</a>
               <a href="/">OFERTAS</a>
             </div>
           </li>
-          <li>
-            <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" style="width: 100%;" /></a>
+          <li class="header_li">
+            <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
           </li>
-          <li>
+          <li class="header_li">
             <div class="header_interestLinks">
               <a href="/">TODAS LAS FUNCIONES</a>
               <a href="/">OFERTAS</a>
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </nav>
-      <div>
+      <div class="header_information">
         <p>650 50 96 39</p>
         <div>
           <p>Corre. Baja de San Pablo, 15</p>
