main paged finished (css html)

--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -14,7 +14,75 @@
     <main class="mainPage">
         <div class="mainPage_mainImage">
             <img src="../assets/images/mainPage_mainImage.jpg" alt="">
+        </div>
 
+        <div class="mainPage_categorySelector">
+            <button>
+                <p>FAMILIAR</p>
+            </button>
+            <button>
+                <p>COMEDIA</p>
+            </button>
+            <button>
+                <p>MUSICAL</p>
+            </button>
+        </div>
+
+        <div class="mainPage_functionsList">
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
+            <div class="function">
+                <img src="../assets/images/function_prueba.jpg" alt="">
+                <div>
+                    <h2>Shakespeare en 97 minutos</h2>
+                    <p>Lorem Ipsum es simplemente el texto
+                        de relleno de las imprentas y archivos
+                        de texto. Lorem Ipsum ha sido el texto</p>
+                </div>
+            </div>
         </div>
     </main>
 
