--- a/web/src/pages/aboutUs.html
+++ b/web/src/pages/aboutUs.html
@@ -8,41 +8,82 @@
     <link rel="stylesheet" href="../styles/generales.css" />
   </head>
   <body>
-    <section class="aboutUs_seccion">
-      <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-        into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-    </section>
-    <section class="aboutUs_seccion">
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-        into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-      <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
-    </section>
-    <section class="aboutUs_seccion">
-      <img src="../assets/images/aboutUs/aboutUs3.jpg" alt="Teatro" />
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-        into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-    </section>
-    <section class="aboutUs_seccion">
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-        into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-      <img src="../assets/images/aboutUs/aboutUs4.jpg" alt="Teatro" />
-    </section>
+    <main class="main_mobile">
+      <section class="aboutUs_section">
+        <h1>¿Quiénes somos?</h1>
+        <p>
+          En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu vibrante y acogedor de la cultura gallega. Situado en el
+          bullicioso escenario de la capital española, nos enorgullece ofrecer una experiencia teatral única que celebra la rica tradición teatral de Galicia.
+        </p>
+        <p>
+          Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos decidió establecer un espacio donde la diversidad de las
+          expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista se ha convertido en un faro cultural, iluminando la escena teatral de
+          Madrid con producciones que cautivan, inspiran y desafían.
+        </p>
+        <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
+      </section>
+      <section class="aboutUs_section">
+        <p>
+          En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad. Creemos en dar voz a las historias que de otra manera
+          podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y diversidad de la experiencia humana. Nuestro elenco y equipo
+          creativo, compuesto por artistas talentosos y apasionados, trabajan incansablemente para ofrecer actuaciones que resuenen con el público y dejen una
+          impresión duradera.
+        </p>
+        <p>
+          Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la comunidad. Colaboramos con artistas locales, organizamos
+          talleres educativos y eventos culturales, creando un ambiente donde la conexión y la expresión artística florecen. Nos enorgullece ser un punto de
+          encuentro para amantes del teatro, tanto veteranos como nuevos espectadores, y estamos comprometidos con construir puentes entre culturas a través de
+          la magia del escenario.
+        </p>
+        <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
+      </section>
+      <section class="aboutUs_section">
+        <p>
+          Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada actuación es una experiencia inolvidable. ¡Esperamos
+          verte entre el público mientras continuamos escribiendo juntos la historia del teatro en Madrid!
+        </p>
+      </section>
+    </main>
+    <main class="main_desktop">
+      <section class="aboutUs_section">
+        <h1>¿Quiénes somos?</h1>
+        <div>
+          <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
+          <div>
+            <p>
+              En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu vibrante y acogedor de la cultura gallega. Situado en
+              el bullicioso escenario de la capital española, nos enorgullece ofrecer una experiencia teatral única que celebra la rica tradición teatral de
+              Galicia.
+            </p>
+            <p>
+              Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos decidió establecer un espacio donde la diversidad de
+              las expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista se ha convertido en un faro cultural, iluminando la escena
+              teatral de Madrid con producciones que cautivan, inspiran y desafían.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="aboutUs_section">
+        <p>
+          En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad. Creemos en dar voz a las historias que de otra manera
+          podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y diversidad de la experiencia humana. Nuestro elenco y equipo
+          creativo, compuesto por artistas talentosos y apasionados, trabajan incansablemente para ofrecer actuaciones que resuenen con el público y dejen una
+          impresión duradera.
+        </p>
+        <p>
+          Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la comunidad. Colaboramos con artistas locales, organizamos
+          talleres educativos y eventos culturales, creando un ambiente donde la conexión y la expresión artística florecen. Nos enorgullece ser un punto de
+          encuentro para amantes del teatro, tanto veteranos como nuevos espectadores, y estamos comprometidos con construir puentes entre culturas a través de
+          la magia del escenario.
+        </p>
+        <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
+      </section>
+      <section class="aboutUs_section">
+        <p>
+          Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada actuación es una experiencia inolvidable. ¡Esperamos
+          verte entre el público mientras continuamos escribiendo juntos la historia del teatro en Madrid!
+        </p>
+      </section>
+    </main>
   </body>
 </html>
