--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -7,9 +7,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/main/mainPage.css">
     <link rel="stylesheet" href="../styles/generales.css">
+    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <header class="header">
+        <nav class="header_nav">
+            <ul class="header_ul">
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="/">TODAS LAS FUNCIONES</a>
+                        <a href="/">OFERTAS</a>
+                    </div>
+                </li>
+                <li class="header_li">
+                    <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                </li>
+                <li>
+                    <div class="header_information">
+                        <p>650 50 96 39</p>
+                        <div>
+                            <p>Corre. Baja de San Pablo, 15</p>
+                            <p>28004 Madrid</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="/">TODAS LAS FUNCIONES</a>
+                        <a href="/">OFERTAS</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="mainPage">
         <div class="mainPage_mainImage">
@@ -85,6 +117,38 @@
             </div>
         </div>
     </main>
+
+    <footer class="footer">
+        <div class="footer_wrapper">
+            <div class="footer_column">
+                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo">
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
+            </div>
+            <div class="footer_column">
+                <h2>QUIENES SOMOS</h2>
+                <a href="#">Quienes somos</a>
+            </div>
+            <div class="footer_column">
+                <h2>PROMOCIONES</h2>
+                <a href="#">Todas las promociones</a>
+            </div>
+            <div class="footer_column">
+                <h2>NUESTRAS REDES</h2>
+                <div class="footer_socials">
+                    <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </div>
+            <div class="footer_column">
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
