mobile desing finished

--- a/web/src/pages/seats.html
+++ b/web/src/pages/seats.html
@@ -64,10 +64,55 @@
 
         <div class="seats_all_seats">
             <div class="seats_all_seats_image">
-
+                <button class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
+                    class="seat"></button><button class="seat"></button><button class="seat"></button>
             </div>
-            <div class="seats_all_seats_info">
 
+            <div class="seats_all_seats_info">
+                <div style="background-color: var(--color-principal);"></div>
+                <p>Libre</p>
+                <div style="background-color: #FF9090;"></div>
+                <p>Ocupado</p>
+                <div style="background-color: #62AE00;"></div>
+                <p>Seleccionado</p>
+            </div>
+
+        </div>
+        <div class="selected_seats">
+            <h2>ASIENTOS SELECCIONADOS</h2>
+            <ul class="selected_seats_list">
+                <li class="selected_seats_item">
+                    <div>
+                        Asiento: F80
+                    </div>
+                    <div>
+                        <p>10€</p>
+                        <button>X</button>
+                    </div>
+                </li>
+            </ul>
+            <div class="selected_seats_total">
+                <h2>TOTAL: 500€</h2>
+                <button>PAGAR</button>
             </div>
         </div>
 
