--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -111,8 +111,8 @@
 
         <section class="purchase_buttons">
             <div>
-                <button>Volver</button>
-                <button>Pagar</button>
+                <button class="purchase_buttons_back">Volver</button>
+                <button class="purchase_buttons_purchase">PAGAR</button>
             </div>
         </section>
         <footer class="footer">
