--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -1,155 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="../styles/main/mainPage.css" />
+        <link rel="stylesheet" href="../styles/generales.css" />
+        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/main/mainPage.css">
-    <link rel="stylesheet" href="../styles/generales.css">
-    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-    <header class="header">
-        <nav class="header_nav">
-            <ul class="header_ul">
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="/">TODAS LAS FUNCIONES</a>
-                        <a href="/">OFERTAS</a>
-                    </div>
-                </li>
-                <li class="header_li">
-                    <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
-                </li>
-                <li>
-                    <div class="header_information">
-                        <p>650 50 96 39</p>
-                        <div>
-                            <p>Corre. Baja de San Pablo, 15</p>
-                            <p>28004 Madrid</p>
+    <body>
+        <header class="header">
+            <nav class="header_nav">
+                <ul class="header_ul">
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="/">TODAS LAS FUNCIONES</a>
+                            <a href="/">OFERTAS</a>
                         </div>
+                    </li>
+                    <li class="header_li">
+                        <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                    </li>
+                    <li>
+                        <div class="header_information">
+                            <p>650 50 96 39</p>
+                            <div>
+                                <p>Corre. Baja de San Pablo, 15</p>
+                                <p>28004 Madrid</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="/">TODAS LAS FUNCIONES</a>
+                            <a href="/">OFERTAS</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main class="mainPage">
+            <div class="mainPage_mainImage">
+                <img src="../assets/images/mainPage_mainImage.jpg" alt="" />
+            </div>
+
+            <div class="mainPage_categorySelector">
+                <button>
+                    <p>FAMILIAR</p>
+                </button>
+                <button>
+                    <p>COMEDIA</p>
+                </button>
+                <button>
+                    <p>MUSICAL</p>
+                </button>
+            </div>
+
+            <div class="mainPage_functionsList">
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
                     </div>
-                </li>
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="/">TODAS LAS FUNCIONES</a>
-                        <a href="/">OFERTAS</a>
+                </div>
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
                     </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
+                </div>
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
+                    </div>
+                </div>
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
+                    </div>
+                </div>
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
+                    </div>
+                </div>
+                <div class="function">
+                    <img src="../assets/images/function_prueba.jpg" alt="" />
+                    <div>
+                        <h2>Shakespeare en 97 minutos</h2>
+                        <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
+                    </div>
+                </div>
+            </div>
+        </main>
 
-    <main class="mainPage">
-        <div class="mainPage_mainImage">
-            <img src="../assets/images/mainPage_mainImage.jpg" alt="">
-        </div>
-
-        <div class="mainPage_categorySelector">
-            <button>
-                <p>FAMILIAR</p>
-            </button>
-            <button>
-                <p>COMEDIA</p>
-            </button>
-            <button>
-                <p>MUSICAL</p>
-            </button>
-        </div>
-
-        <div class="mainPage_functionsList">
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
+        <footer class="footer">
+            <div class="footer_wrapper">
+                <div class="footer_column">
+                    <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
+                </div>
+                <div class="footer_column">
+                    <h2>QUIENES SOMOS</h2>
+                    <a href="#">Quienes somos</a>
+                </div>
+                <div class="footer_column">
+                    <h2>PROMOCIONES</h2>
+                    <a href="#">Todas las promociones</a>
+                </div>
+                <div class="footer_column">
+                    <h2>NUESTRAS REDES</h2>
+                    <div class="footer_socials">
+                        <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="footer_column">
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
                 </div>
             </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="">
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto
-                        de relleno de las imprentas y archivos
-                        de texto. Lorem Ipsum ha sido el texto</p>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <footer class="footer">
-        <div class="footer_wrapper">
-            <div class="footer_column">
-                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo">
-                <p>650 50 50 96</p>
-                <p>Corre. Baja de San Pablo, 15</p>
-                <p>28004 Madrid</p>
-            </div>
-            <div class="footer_column">
-                <h2>QUIENES SOMOS</h2>
-                <a href="#">Quienes somos</a>
-            </div>
-            <div class="footer_column">
-                <h2>PROMOCIONES</h2>
-                <a href="#">Todas las promociones</a>
-            </div>
-            <div class="footer_column">
-                <h2>NUESTRAS REDES</h2>
-                <div class="footer_socials">
-                    <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                </div>
-            </div>
-            <div class="footer_column">
-                <p>650 50 50 96</p>
-                <p>Corre. Baja de San Pablo, 15</p>
-                <p>28004 Madrid</p>
-            </div>
-        </div>
-    </footer>
-
-</body>
-
+        </footer>
+    </body>
 </html>
