Pagina seats actualizada

--- a/web/src/pages/seats.html
+++ b/web/src/pages/seats.html
@@ -1,123 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="../styles/main/seats.css" />
+        <link rel="stylesheet" href="../styles/generales.css" />
+        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/main/seats.css">
-    <link rel="stylesheet" href="../styles/generales.css">
-    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
-</head>
+    <body>
+        <header class="header">
+            <nav class="header_nav">
+                <ul class="header_ul">
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="/">TODAS LAS FUNCIONES</a>
+                            <a href="/">OFERTAS</a>
+                        </div>
+                    </li>
+                    <li class="header_li">
+                        <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                    </li>
+                    <li>
+                        <div class="header_information">
+                            <p>650 50 96 39</p>
+                            <div>
+                                <p>Corre. Baja de San Pablo, 15</p>
+                                <p>28004 Madrid</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="/">TODAS LAS FUNCIONES</a>
+                            <a href="/">OFERTAS</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="seats">
+            <a href="mainPage.html" class="seats_goBack"><i class="fa-solid fa-arrow-left"></i> Volver</a>
 
-<body>
-
-    <main class="seats">
-        <a href="mainPage.html" class="seats_goBack"><i class="fa-solid fa-arrow-left"></i> Volver</a>
-
-        <div class="seats_info">
-            <div class="seats_functionInfo">
-                <div class="function">
-                    <img src="../assets/images/function_prueba.jpg" alt="">
-                    <div>
-                        <h2>Shakespeare en 97 minutos</h2>
-                        <p>Lorem Ipsum es simplemente el texto
-                            de relleno de las imprentas y archivos
-                            de texto. Lorem Ipsum ha sido el texto</p>
+            <div class="seats_info">
+                <div class="seats_functionInfo">
+                    <div class="function">
+                        <img src="../assets/images/function_prueba.jpg" alt="" />
+                        <div>
+                            <h2>Shakespeare en 97 minutos</h2>
+                            <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto</p>
+                        </div>
                     </div>
+                </div>
+
+                <div class="seats_list">
+                    <ul>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                        <li>
+                            <p>21/11/2023 - 23:00</p>
+                            <input type="checkbox" />
+                        </li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="seats_list">
-                <ul>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox">
+            <div class="seats_all_seats">
+                <div class="seats_all_seats_image">
+                    <button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button><button class="seat"></button
+                    ><button class="seat"></button><button class="seat"></button><button class="seat"></button>
+                </div>
+
+                <div class="seats_all_seats_info">
+                    <div style="background-color: var(--color-principal)"></div>
+                    <p>Libre</p>
+                    <div style="background-color: #ff9090"></div>
+                    <p>Ocupado</p>
+                    <div style="background-color: #62ae00"></div>
+                    <p>Seleccionado</p>
+                </div>
+            </div>
+            <div class="selected_seats">
+                <h2>ASIENTOS SELECCIONADOS</h2>
+                <ul class="selected_seats_list">
+                    <li class="selected_seats_item">
+                        <div>Asiento: F80</div>
+                        <div>
+                            <p>10€</p>
+                            <button>X</button>
+                        </div>
                     </li>
                 </ul>
+                <div class="selected_seats_total">
+                    <h2>TOTAL: 500€</h2>
+                    <button>PAGAR</button>
+                </div>
             </div>
-        </div>
+        </main>
 
-        <div class="seats_all_seats">
-            <div class="seats_all_seats_image">
-                <button class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button><button
-                    class="seat"></button><button class="seat"></button><button class="seat"></button>
-            </div>
-
-            <div class="seats_all_seats_info">
-                <div style="background-color: var(--color-principal);"></div>
-                <p>Libre</p>
-                <div style="background-color: #FF9090;"></div>
-                <p>Ocupado</p>
-                <div style="background-color: #62AE00;"></div>
-                <p>Seleccionado</p>
-            </div>
-
-        </div>
-        <div class="selected_seats">
-            <h2>ASIENTOS SELECCIONADOS</h2>
-            <ul class="selected_seats_list">
-                <li class="selected_seats_item">
-                    <div>
-                        Asiento: F80
+        <footer class="footer">
+            <div class="footer_wrapper">
+                <div class="footer_column">
+                    <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
+                </div>
+                <div class="footer_column">
+                    <h2>QUIENES SOMOS</h2>
+                    <a href="#">Quienes somos</a>
+                </div>
+                <div class="footer_column">
+                    <h2>PROMOCIONES</h2>
+                    <a href="#">Todas las promociones</a>
+                </div>
+                <div class="footer_column">
+                    <h2>NUESTRAS REDES</h2>
+                    <div class="footer_socials">
+                        <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                     </div>
-                    <div>
-                        <p>10€</p>
-                        <button>X</button>
-                    </div>
-                </li>
-            </ul>
-            <div class="selected_seats_total">
-                <h2>TOTAL: 500€</h2>
-                <button>PAGAR</button>
+                </div>
+                <div class="footer_column">
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
+                </div>
             </div>
-        </div>
-
-    </main>
-
-</body>
-
+        </footer>
+    </body>
 </html>
