--- a/web/src/pages/notFound.html
+++ b/web/src/pages/notFound.html
@@ -6,6 +6,7 @@
         <title>Teatro Galeguista</title>
         <link rel="stylesheet" href="../styles/generales.css" />
         <link rel="stylesheet" href="../styles/main/notFound.css" />
+        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header">
