Cambios de purchase page, arreglado

--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -111,8 +111,8 @@
 
         <section class="purchase_buttons">
             <div>
-                <button class="purchase_buttons_back">Volver</button>
-                <button class="purchase_buttons_purchase">PAGAR</button>
+                <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
+                <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
             </div>
         </section>
         <footer class="footer">
