ya funciona toda la informacion de seleccionar asientos

--- a/web/src/pages/seats.html
+++ b/web/src/pages/seats.html
@@ -48,39 +48,6 @@
         <div class="seats_info">
             <div class="seats_functionInfo">
             </div>
-
-            <div class="seats_list">
-                <ul>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                    <li>
-                        <p>21/11/2023 - 23:00</p>
-                        <input type="checkbox" />
-                    </li>
-                </ul>
-            </div>
         </div>
 
         <div class="seats_all_seats">
@@ -99,16 +66,9 @@
         <div class="selected_seats">
             <h2>ASIENTOS SELECCIONADOS</h2>
             <ul class="selected_seats_list">
-                <li class="selected_seats_item">
-                    <div>Asiento: F80</div>
-                    <div>
-                        <p>10€</p>
-                        <button>X</button>
-                    </div>
-                </li>
             </ul>
             <div class="selected_seats_total">
-                <h2>TOTAL: 500€</h2>
+                <h2>TOTAL:</h2>
                 <button>PAGAR</button>
             </div>
         </div>
