--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Teatro Galeguista</title>
-        <link rel="stylesheet" href="../styles/main/purchasePage.css" />
-        <link rel="stylesheet" href="../styles/generales.css" />
-        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="header">
-            <nav class="header_nav">
-                <ul class="header_ul">
-                    <li class="header_li">
-                        <div class="header_interestLinks">
-                            <a href="/">TODAS LAS FUNCIONES</a>
-                            <a href="/">OFERTAS</a>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Teatro Galeguista</title>
+    <link rel="stylesheet" href="../styles/main/purchasePage.css" />
+    <link rel="stylesheet" href="../styles/generales.css" />
+    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header class="header">
+        <nav class="header_nav">
+            <ul class="header_ul">
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="/">TODAS LAS FUNCIONES</a>
+                        <a href="/">OFERTAS</a>
+                    </div>
+                </li>
+                <li class="header_li">
+                    <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                </li>
+                <li>
+                    <div class="header_information">
+                        <p>650 50 96 39</p>
+                        <div>
+                            <p>Corre. Baja de San Pablo, 15</p>
+                            <p>28004 Madrid</p>
                         </div>
-                    </li>
-                    <li class="header_li">
-                        <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
-                    </li>
-                    <li>
-                        <div class="header_information">
-                            <p>650 50 96 39</p>
-                            <div>
-                                <p>Corre. Baja de San Pablo, 15</p>
-                                <p>28004 Madrid</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="header_li">
-                        <div class="header_interestLinks">
-                            <a href="/">TODAS LAS FUNCIONES</a>
-                            <a href="/">OFERTAS</a>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+                    </div>
+                </li>
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="/">TODAS LAS FUNCIONES</a>
+                        <a href="/">OFERTAS</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <section class="data_formulary">
             <form>
                 <h2>Introduce tus datos</h2>
@@ -51,7 +54,8 @@
                     <div>
                         <input type="text" id="surnames" name="surnames" placeholder="Apellidos" required />
 
-                        <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico" required />
+                        <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico"
+                            required />
                     </div>
                     <div>
                         <input type="text" id="mobile" name="mobile" placeholder="Número de teléfono móvil" required />
@@ -60,7 +64,9 @@
 
                 <div>
                     <input type="checkbox" />
-                    <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la Política de privacidad.</span>
+                    <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la
+                        Política de
+                        privacidad.</span>
                 </div>
                 <div>
                     <input type="checkbox" />
@@ -69,29 +75,6 @@
             </form>
         </section>
 
-        <section class="data_information">
-            <div class="data_information_section">
-                <h2>Tu selección</h2>
-                <h3>TÍTULO DEL ESPECTÁCULO</h3>
-                <div class="data_information_section_custom">
-                    <div class="data_information_section_date">
-                        <div>
-                            <i class="fa-regular fa-clock"></i>
-                            <span>Hora</span>
-                        </div>
-
-                        <div>
-                            <i class="fa-regular fa-calendar"></i>
-                            <span>Fecha</span>
-                        </div>
-                    </div>
-                    <div class="data_information_section_place">
-                        <span>Fila X</span>
-                        <span>Asiento Y</span>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section class="data_payment">
             <form>
@@ -108,43 +91,47 @@
                 </div>
             </form>
         </section>
+    </main>
 
-        <section class="purchase_buttons">
-            <div>
-                <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
-                <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
+
+
+    <section class="purchase_buttons">
+        <div>
+            <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
+            <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_wrapper">
+            <div class="footer_column">
+                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
             </div>
-        </section>
-        <footer class="footer">
-            <div class="footer_wrapper">
-                <div class="footer_column">
-                    <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
-                    <p>650 50 50 96</p>
-                    <p>Corre. Baja de San Pablo, 15</p>
-                    <p>28004 Madrid</p>
-                </div>
-                <div class="footer_column">
-                    <h2>QUIENES SOMOS</h2>
-                    <a href="#">Quienes somos</a>
-                </div>
-                <div class="footer_column">
-                    <h2>PROMOCIONES</h2>
-                    <a href="#">Todas las promociones</a>
-                </div>
-                <div class="footer_column">
-                    <h2>NUESTRAS REDES</h2>
-                    <div class="footer_socials">
-                        <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                    </div>
-                </div>
-                <div class="footer_column">
-                    <p>650 50 50 96</p>
-                    <p>Corre. Baja de San Pablo, 15</p>
-                    <p>28004 Madrid</p>
+            <div class="footer_column">
+                <h2>QUIENES SOMOS</h2>
+                <a href="#">Quienes somos</a>
+            </div>
+            <div class="footer_column">
+                <h2>PROMOCIONES</h2>
+                <a href="#">Todas las promociones</a>
+            </div>
+            <div class="footer_column">
+                <h2>NUESTRAS REDES</h2>
+                <div class="footer_socials">
+                    <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                 </div>
             </div>
-        </footer>
-    </body>
+            <div class="footer_column">
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
