--- a/web/src/pages/seats.html
+++ b/web/src/pages/seats.html
@@ -69,7 +69,7 @@
             </ul>
             <div class="selected_seats_total">
                 <h2>TOTAL:</h2>
-                <button>PAGAR</button>
+                <button><a href="purchasePage.html">PAGAR</a></button>
             </div>
         </div>
     </main>
